Make Chrome look for both the FIDO and caBLE GATT service UUIDs

This will allow Chrome to recognize caBLE on both the old and new
UUIDs that GmsCore might be advertising.

TBR=martinkr@google.com

Bug: 905111
Change-Id: I1deffbcad6b5a88cdb7c22b316c7eff421fc30cb
Reviewed-on: https://chromium-review.googlesource.com/c/1370954
Commit-Queue: Kim Paulhamus <kpaulhamus@chromium.org>
Reviewed-by: Kim Paulhamus <kpaulhamus@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621276}
Former-commit-id: 46ccf182b9a6c3b756ba6042a48daefa7fb8f417